# multiuser-rag

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  smoke_test.py
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  main.jsx  styles.css
frontend/src/components/: AuthScreen.jsx  ChatApp.jsx  Conversation.jsx  Sidebar.jsx
rag_app/: config.py  embeddings.py  ingest.py  llm.py  rag.py  reranker.py  storage.py  vectorstore.py
rag_app/auth/: db.py  service.py
rag_app/chat/: conversations.py  history.py  mirror.py
rag_app/ui/: app.py  login_window.py  main_window.py  workers.py
rag_app/web/: __init__.py  app.py  ingest_jobs.py  ratelimit.py  schemas.py  security.py
rag_app/web/routes/: auth.py  chat.py  documents.py
tests/: conftest.py  test_auth.py  test_chunking.py  test_history.py  test_image_vision.py  test_ingest_loaders.py  test_isolation.py  test_prompt.py  test_ratelimit.py  test_storage.py
