[project]
name = "multiuser-rag"
version = "0.1.0"
description = "Multi-user RAG app with PyQt5 desktop and FastAPI + React web UIs: Qdrant retrieval, Groq generation, NIM embeddings/reranking, PostgreSQL + MinIO storage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt5>=5.15.11",
    "qdrant-client>=1.18.0",
    "groq>=0.13.0",
    "openai>=1.40.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "pypdf>=4.0.0",
    "httpx>=0.27.0",            # NIM reranker calls
    "minio>=7.2.0",             # per-user object storage (chats + document originals)
    "psycopg[binary]>=3.1",     # PostgreSQL driver (users + chat history)
    # --- Ingestion: richer file types beyond text/PDF ---
    "python-docx>=1.1.0",       # Word (.docx)
    "openpyxl>=3.1.0",          # Excel (.xlsx/.xlsm)
    "python-pptx>=0.6.23",      # PowerPoint (.pptx)
    "Pillow>=10.0.0",           # image decoding for OCR
    "pytesseract>=0.3.10",      # image OCR (needs the Tesseract binary on PATH)
    # --- Web layer (FastAPI backend for the React UI) ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "PyJWT>=2.9.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# smoke_test.py adjusts sys.path before importing the package on purpose.
"smoke_test.py" = ["E402"]
